public/stylesheets/sass/order.scss
#page_products_order {
    .left_col .content {
        padding: 0;
        .text_content {
            padding: 10px;
        }
        nav {
            padding: 5px;
        }
    }
    .right_col {
        .content_wrapper {
            .content {
                padding: 10px;
            }
        }
    }
    .fields {
        p.label, p.input {
            float: left;
            line-height: 1.7;
        }
        p.label {
            text-align: right;
            margin-right: 1em;
            width: 10em;
        }
        p.input {
            width: 14em;
        }
        p.input.no_color_choices {
            color: #aaa;
            font-family: Georgia, times new roman, times, serif;
            font-style: italic;
        }
        input[type=text],
        select {
            min-width: 200px;
        }
        .divider {
            border-top: 1px dashed #ccc;
            width: 60%;
            margin: 0 auto 1em;
        }
    }
    #color_swatches {
        div {
            color: #eee;
            padding: 10px 10px;
            text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
            min-height: 70px;
            font-family: helvetica, arial, sans-serif;;
            font-size: 12px;
            line-height: 1.4;
        }
    }
}

